--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cloud_firestore: ^4.3.1
+  cloud_firestore: null
+  collapsible_sidebar: ^2.0.3+2
   conditional_builder_null_safety: ^0.0.6
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
@@ -40,34 +41,26 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
-  flutter_elegant_number_button: ^0.0.6
   flutter_firebase_firestore: ^0.0.1
-  flutter_form_builder: ^7.7.0
   flutter_localizations:
     sdk: flutter
+  flutter_screenutil: ^5.6.1
   flutter_slidable: ^2.0.0
   flutter_staggered_animations: ^1.1.1
   get_it: ^7.2.0
   page_transition: ^2.0.9
-  path: ^1.8.2
   shared_preferences: ^2.0.15
+  shimmer: ^2.0.0
   sqflite: ^2.2.2
-  firebase_core_web: ^2.2.1
+  vertical_tabs_flutter: ^1.0.0
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^2.0.0
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -79,13 +72,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
