--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,12 +22,6 @@ version: 1.0.0+1
 environment:
   sdk: '>=2.18.6 <3.0.0'
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   cloud_firestore: null
   collapsible_sidebar: ^2.0.3+2
@@ -35,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   dropdown_button2: ^1.9.2
+  easy_localization: ^3.0.1
   equatable: ^2.0.5
   firebase_auth: ^4.2.5
   firebase_core: ^2.4.1
@@ -42,13 +37,12 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.1
   flutter_firebase_firestore: ^0.0.1
-  flutter_localizations:
-    sdk: flutter
   flutter_screenutil: ^5.6.1
   flutter_slidable: ^2.0.0
   flutter_staggered_animations: ^1.1.1
   get_it: ^7.2.0
   page_transition: ^2.0.9
+  responsive_framework: ^0.2.0
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
   sqflite: ^2.2.2
@@ -72,6 +66,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/
+    - assets/translate/
+    # - assets/translate/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
