--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ environment:
     sdk: '>=2.18.6 <3.0.0'
 dependencies:
     awesome_dialog: ^3.0.2
-    cloud_firestore: null
+    cloud_firestore: 
     collapsible_sidebar: ^2.0.3+2
     conditional_builder_null_safety: ^0.0.6
     cupertino_icons: ^1.0.2
@@ -27,10 +27,7 @@ dependencies:
     flutter_staggered_animations: ^1.1.1
     get_it: ^7.2.0
     page_transition: ^2.0.9
-    shared_preferences: ^2.0.15
     shimmer: ^2.0.0
-    sqflite: ^2.2.2
-    text_to_speech: ^0.2.3
 dev_dependencies:
     flutter_lints: ^2.0.0
     flutter_test:
